fix: remove unused imports across multiple files